--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -20,8 +20,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: 
-          password: 
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -38,18 +38,18 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: /:,/:latest
+          tags: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }},${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Scan image
         uses: anchore/scan-action@v7
         id: scan
         with:
-          image: "/:"
+          image: "${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.TAG }}"
 
       - name: upload Anchore scan SARIF report
         uses: github/codeql-action/upload-sarif@v4
         with:
-          sarif_file: 
+          sarif_file: ${{ steps.scan.outputs.sarif }}
 
       - name: Inspect action SARIF report
-        run: cat 
+        run: cat ${{ steps.scan.outputs.sarif }}
